Add config to use repeats
Closes #1

Update to use n8henrie/node-rcswitch-gpiomem v0.3.1 in order to take
advantage of the `setRepeatTransmit` method.

Closes #1

--- a/config-sample.json
+++ b/config-sample.json
@@ -14,7 +14,8 @@
             "offCode": 2345678,
             "pin": 17,
             "pulseLength": 190,
-            "bitLength": 24
+            "bitLength": 24,
+            "repeats": 10
         },
         {
             "accessory": "RCSwitch",
